src/tests/data/TypeErrors/AssignStringToInt.c

#include <stdio.h>

int main()
{
	int a = "a";    // ERROR
	return 0;
}